[package]
name = "noname-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-broadcast = "0.7.1"
fastwebsockets = { version = "0.8.0", features = ["unstable-split", "upgrade"] }
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = "0.1.7"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
